--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,9 +19,10 @@ jobs:
         working-directory: waiter-app/Comanda
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
-    - name: set up JDK 17
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
@@ -32,6 +33,4 @@ jobs:
       run: chmod +x gradlew
       
     - name: Build with Gradle
-      env:
-        GRADLE_JVM_ARGS: -Xmx4096m
-      run: ./gradlew build
+      run: ./gradlew build --no-daemon -Dorg.gradle.jvmargs="-Xmx4096m -XX:MaxMetaspaceSize=512m"
